Update paths to qunit and css

--- a/test.html
+++ b/test.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>My jQuery Test</title>
-	<link rel="stylesheet" href="../lib/qunit.css"/>
+	<link rel="stylesheet" href="lib/qunit.css"/>
 	<link rel="stylesheet" href="test_styles.css"/>
 </head>
 <body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="my_jquery.js"></script>
-	<script src="../lib/qunit.js"></script>
+	<script src="lib/qunit.js"></script>
 	<script>
 		var clickIt = function(el){
 			var event = document.createEvent('MouseEvents');
